# corky-charts

./: Cargo.toml  README.md  config.toml  install.sh  uninstall.sh
src/: main.rs
