[package]
name = "corky-charts"
version = "0.1.0"
edition = "2024"

[banner]
ascii = """
    /\\
   /  \\
  /    \\__
_/        \\
           \\__
  Corky Charts
"""


[corky]
is_corky_package = true


[dependencies]
zmq = "0.10"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
plotters = "0.3.5"
plotters-bitmap = "0.3.5"
dirs = "5.0.1"
